Fix project section mobile responsivity

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -26,6 +26,10 @@ p {
     .social-icon {
         font-size: 1.5rem;
     }
+
+    p {
+        font-size: 0.7rem;
+    }
 }
 
 @keyframes bounce {
