--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -189,10 +189,12 @@ span {
 
     .resume-button,
     .contact-button {
-        margin: 1rem auto;
+        margin: 1.2rem auto;
         display: block;
         font-size: 1.2rem;
-        width: fit-content;
+        width: auto;
+        max-width: 200px;
+        text-align: center;
     }
 
     .home-social-icons {
