--- a/src/Components/ProjCards/ProjCards.css
+++ b/src/Components/ProjCards/ProjCards.css
@@ -11,7 +11,6 @@
     margin-left: 60px;
     text-align: left;
     transition: margin 0.3s;
-    padding-top: 20px;
 }
 
 .proj-cards-container {
@@ -34,8 +33,7 @@
     width: 100%;
     max-width: 300px;
     margin: 0 auto;
-    transition: transform 0.3s ease-in-out;
-    height: 620px;
+    height: 530px;
 }
 
 .project-card:hover {
@@ -137,9 +135,9 @@
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
-    overflow: visible;
-    padding-top: 80px;
-    padding-bottom: 60px;
+    overflow: hidden;
+    padding-top: 40px;
+    padding-bottom: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -152,6 +150,8 @@
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.25);
     transition: opacity 0.5s ease;
+    padding-left: 60px;
+    padding-right: 60px;
 }
 
 .carousel-container.show {
@@ -159,7 +159,7 @@
 }
 
 .proj-cards-carousel .slick-prev {
-    left: 30px;
+    left: 10px;
     top: 50%;
     transform: translateY(-50%);
     z-index: 2;
@@ -172,7 +172,7 @@
 }
 
 .proj-cards-carousel .slick-next {
-    right: 30px;
+    right: 10px;
     top: 50%;
     transform: translateY(-50%);
     z-index: 2;
@@ -190,34 +190,73 @@
   color: #fff;
 }
 
-
-@media (min-width: 768px) {
-    .proj-cards-container {
-        flex-direction: row;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        gap: 20px;
-    }
-
-    .project-card {
-        width: 30%;
-        margin: 5px;
-    }
-}
-
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .proj-cards-container {
         gap: 60px;
     }
 
     .project-card {
-        width: 100%;
+        max-width: 90%;
+        margin: 0 auto;
+        height: auto;
+    }
+
+    .proj-cards-carousel {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .proj-cards-carousel .slick-prev{
+        left: 0;
+    }
+
+    .proj-cards-carousel .slick-next{
+        right: 0;
+    }
+
+    .project-title {
+        font-size: 1.3rem;
+    }
+
+    .project-thumbnail {
+        height: 180px;
+    }
+
+    .project-description {
+        font-size: 1rem;
+    }
+
+    .skill-badge {
+        margin: 4px 4px 0 0;
+        padding: 6px 12px;
+        background-color: #2774AE;
+        color: white;
+        border-radius: 12px;
+        font-size: 0.8rem;
+    }
+
+    .live-link, .demo-link {
+        font-size: 0.9rem;
+        padding: 8px 16px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        display: inline-block;
+        text-decoration: none;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        width: 80%;
+        margin: 10px auto;
     }
 
     .proj-heading {
-        font-size: 1.5rem;
         margin-left: 0;
-        padding-bottom: 10px;
-        text-align: left;
+        text-align: center;
+    }
+
+    .slick-arrow,
+    .slick-prev,
+    .slick-next {
+        display: none !important;
     }
 }
